--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -17,10 +17,10 @@
         <h2>Routes</h2>
         <ul>
           <li><a href="/">/</a></li>
-          <li><a href="/trainees">/trainees</a></li>
-          <li><a href="/weeks">/weeks</a></li>
-          <li><a href="/coursework">/coursework</a></li>
-          <li><a href="/trainee-coursework">/trainee-coursework</a></li>
+          <li><a href="/api/trainees">/api/trainees</a></li>
+          <li><a href="/api/weeks">/api/weeks</a></li>
+          <li><a href="/api/coursework">/api/coursework</a></li>
+          <li><a href="/api/trainee-coursework">/api/trainee-coursework</a></li>
         </ul>
       </section>
     </main>
