add iframe to backend index

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -21,28 +21,29 @@
         <ul>
           <li><a href="/">/</a></li>
           <li>
-            <a href="/api/trainees" target="_blank">GET /api/trainees</a>
+            <a href="/api/trainees" target="iframe">GET /api/trainees</a>
           </li>
-          <li><a href="/api/weeks" target="_blank">GET /api/weeks</a></li>
+          <li><a href="/api/weeks" target="iframe">GET /api/weeks</a></li>
           <li>
-            <a href="/api/coursework" target="_blank">GET /api/coursework</a>
+            <a href="/api/coursework" target="iframe">GET /api/coursework</a>
           </li>
           <li>
-            <a href="/api/trainee-coursework" target="_blank"
+            <a href="/api/trainee-coursework" target="iframe"
               >GET /api/trainee-coursework</a
             >
           </li>
           <li>
             <a
               href="/api/trainee-coursework/trainee=1&coursework=1"
-              target="_blank"
+              target="iframe"
               >GET /api/trainee-coursework/trainee=1&coursework=1</a
             >
           </li>
           <li>
-            <a href="/">PUT /api/trainee-coursework/trainee=1&coursework=1</a>
+            <a href="#">PUT /api/trainee-coursework/trainee=1&coursework=1</a>
           </li>
         </ul>
+        <iframe name="iframe"></iframe>
       </main>
     </div>
   </body>
